--- a/usg.config
+++ b/usg.config
@@ -1,18 +1,22 @@
 #setup vpn
 set interfaces openvpn vtun0 config-file /config/user-data/nyc.ovpn
+
+#set up the NAT rules for routing
 set service nat rule 5010 outbound-interface vtun0
 set service nat rule 5010 type masquerade
 
+#turn off firewall source-valuidation (required)
 set firewall source-validation disable
-
 
 #vlan2 to vpn
 set protocols static table 1 interface-route 0.0.0.0/0 next-hop-interface vtun0
 
+#create the firewall rules need to route out
 set firewall group address-group vpn_ch
 set firewall group address-group vpn_ch address 192.168.2.0/24
 
 set firewall modify detour rule 11 source group address-group vpn_ch
 set firewall modify detour rule 11 modify table 1
 
+#bind eth1 to the rules
 set interfaces ethernet eth1 vif 2 firewall in modify detour
